--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
 Django==2.2.7
-django-xhtml2pdf==0.0.4
-html5lib==1.0.1
-Pillow==6.2.1
-PyPDF2==1.26.0
+django-crispy-forms==1.8.0
 pytz==2019.3
-reportlab==3.5.32
-six==1.12.0
 sqlparse==0.3.0
-webencodings==0.5.1
-xhtml2pdf==0.2.3
