--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
 Django==2.2.7
 django-crispy-forms==1.8.0
+django-xhtml2pdf==0.0.4
+html5lib==1.0.1
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+Pillow==6.2.1
+PyPDF2==1.26.0
 pytz==2019.3
+PyYAML==5.1.2
+render==1.0.0
+reportlab==3.5.32
+six==1.13.0
 sqlparse==0.3.0
+webencodings==0.5.1
+xhtml2pdf==0.2.3
